# mlops-demand-forecasting

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  retrain.yml
config/: config.yaml
docs/: architecture.md
docs/specs/: 2026-06-25-forecasting-design.md
models/: metadata.json  model.pkl
reports/: metrics.json
src/forecasting/: __init__.py  backtest.py  baselines.py  config.py  evaluate.py  features.py  forecast.py  generator.py  metrics.py  model.py  monitor.py  registry.py  retrain.py  train.py
src/forecasting/api/: main.py  schemas.py
tests/: test_api.py  test_backtest.py  test_features.py  test_forecast.py  test_generator.py  test_metrics.py  test_monitor.py  test_smoke.py
