[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forecasting"
version = "0.1.0"
description = "Demand forecasting with a full MLOps lifecycle: backtesting, MLflow tracking + model registry, automated retraining, drift monitoring, and a FastAPI service."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bushra Nazeer", email = "bushnaze@gmail.com" }]
keywords = ["forecasting", "time-series", "mlops", "mlflow", "lightgbm", "drift-monitoring"]

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "statsmodels>=0.14",
    "optuna>=3.6",
    "mlflow>=2.12",
    "holidays>=0.50",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]
# Optional classical model (heavier install; lazily imported if present).
prophet = ["prophet>=1.1"]

[project.urls]
Homepage = "https://github.com/bushra-nazeer/mlops-demand-forecasting"

[tool.hatch.build.targets.wheel]
packages = ["src/forecasting"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
